Updates from ShareLaTeX

--- a/thesis/chap4.tex
+++ b/thesis/chap4.tex
@@ -29,7 +29,7 @@ The first thing that \texttt{preprocessStreams} does is discretize the parts of 
 
 A good alignment of the piece would involve aligning corresponding instrumental parts with each other to ensure that the beginnings and ends of corresponding parts aligned with each other. However, if we treat the inputs both as one long stream composed of four serial streams instead of four parallel streams, only the beginnings of the first instrumental parts and the ends of the last instrumental parts would be guaranteed to be aligned with each other. This guarantee comes from the global alignment method that I chose to implement. The figures below illustrate the phenomenon. 
 
-\begin{figure}[!h]
+\begin{figure}[!ht]
 \centering
 \includegraphics[width=.5\textwidth]{omrmidisheets2}
 \caption{An example string quartet stream and its four parts.}
