--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -28,7 +28,7 @@
 \documentclass[12pt,twoside]{mitthesis}
 \usepackage{amsmath}
 \usepackage{lgrind}
-%\usepackage{minted}
+\usepackage[outputdir=build]{minted}
 \usepackage{graphicx, float}
 \usepackage{hyperref} 
 \graphicspath{ {images/} }
